--- a/resources/css/player.css
+++ b/resources/css/player.css
@@ -5,15 +5,20 @@ body {
 }
 
 #player {
-    width: 100vw;
-    height: 100vh;
+    width: 1080px;
+    height: 1920px;
+    max-width: 100vw;
+    max-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: auto; 
+    background: black;
 }
 
 video,
 img {
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: 100%;
+    object-fit: contain; 
 }
